--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
@@ -1,6 +1,157 @@
 <h1 mat-dialog-title>Recovery Details</h1>
-<div mat-dialog-content class="form-container">
-  {{ data | json }}
+<div mat-dialog-content class="container">
+  <section class="details" *ngIf="programDetails">
+    <div>
+      <div class="text-dark">Program No</div>
+      <div>{{ programDetails.programNo }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Program Date</div>
+      <div>{{ programDetails.programDate }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Shade</div>
+      <div>{{ programDetails.shadeName }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Blend</div>
+      <div>{{ programDetails.blendName }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Lot(s)</div>
+      <div>{{ data.yarnLot }}</div>
+    </div>
+  </section>
+  <div *ngIf="programDetails?.yarnCounts?.length">
+    <div class="table-header text-dark">Yarn Counts</div>
+    <table mat-table [dataSource]="programDetails.yarnCounts" class="table">
+      <ng-container matColumnDef="sNo">
+        <th mat-header-cell *matHeaderCellDef>S No</th>
+        <td mat-cell *matCellDef="let element; let index = index">
+          {{ index + 1 }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="counts">
+        <th mat-header-cell *matHeaderCellDef>Counts</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.counts }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="programQty">
+        <th mat-header-cell *matHeaderCellDef>Program Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.programQuantity }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="producedQty">
+        <th mat-header-cell *matHeaderCellDef>Produced Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.productionQuantity }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="yarnCountsColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: yarnCountsColumns"></tr>
+    </table>
+  </div>
+  <div *ngIf="programDetails?.mixingSummary?.length">
+    <div class="table-header text-dark">Mixing Summary</div>
+    <table mat-table [dataSource]="programDetails.mixingSummary" class="table">
+      <ng-container matColumnDef="sNo">
+        <th mat-header-cell *matHeaderCellDef>S No</th>
+        <td mat-cell *matCellDef="let element; let index = index">
+          {{ index + 1 }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="fibreType">
+        <th mat-header-cell *matHeaderCellDef>Fibre Type</th>
+        <td mat-cell *matCellDef="let element">
+          {{ getFibreType(element.fibreTypeId) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="fibreCategory">
+        <th mat-header-cell *matHeaderCellDef>Fibre Category</th>
+        <td mat-cell *matCellDef="let element">
+          {{ getFibreCategory(element.fibreCategoryId) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="issueQty">
+        <th mat-header-cell *matHeaderCellDef>Issue Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.issueQuantity }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="wasteColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: wasteColumns"></tr>
+    </table>
+  </div>
+  <section class="details" *ngIf="programDetails">
+    <div class="mb-12">
+      <div class="text-dark">Mixed Quantity (kg)</div>
+      <div>{{ data.mixedQuantity | number : "1.0-3" }}</div>
+    </div>
+  </section>
+  <div *ngIf="wasteDetails.length">
+    <div class="table-header text-dark">Waste Details</div>
+    <table mat-table [dataSource]="wasteDetails" class="table">
+      <ng-container matColumnDef="sNo">
+        <th mat-header-cell *matHeaderCellDef>S No</th>
+        <td mat-cell *matCellDef="let element; let index = index">
+          {{ index + 1 }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="wasteCategory">
+        <th mat-header-cell *matHeaderCellDef>Waste Category</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.wasteCategoryName }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="wasteQty">
+        <th mat-header-cell *matHeaderCellDef>Waste Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.wasteQuantity }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="wasteColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: wasteColumns"></tr>
+    </table>
+  </div>
+  <section class="details" *ngIf="programDetails">
+    <div>
+      <div class="text-dark">Waste Quantity (kg)</div>
+      <div>{{ data.wasteQuantity | number : "1.0-3" }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Produced Quantity (kg)</div>
+      <div>{{ data.productionQty | number : "1.0-3" }}</div>
+    </div>
+    <div>
+      <div class="text-dark">Waste Percentage</div>
+      <div>
+        {{
+          (data.wasteQuantity / data.mixedQuantity) * 100 || 0
+            | number : "1.2-2"
+        }}%
+      </div>
+    </div>
+    <div>
+      <div class="text-dark">Yarn Recovery Percentage</div>
+      <div>{{ data.yarnRecoveryPercent || 0 | number : "1.2-2" }}%</div>
+    </div>
+  </section>
 </div>
 <div mat-dialog-actions class="footer">
   <button mat-raised-button (click)="close()">Close</button>
