--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -7,73 +7,60 @@
 
   <div class="mat-elevation-z8 overflow-auto">
     <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="letterNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Letter No</th>
-        <td mat-cell *matCellDef="let row">{{ row.letterNo }}</td>
+      <ng-container matColumnDef="programNo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Program No</th>
+        <td mat-cell *matCellDef="let row">{{ row.programNo }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="buyer">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Buyer</th>
-        <td mat-cell *matCellDef="let row">{{ row.buyer }}</td>
+      <ng-container matColumnDef="programDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Date</th>
+        <td mat-cell *matCellDef="let row">{{ row.programDate }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="shadeNo">
+      <ng-container matColumnDef="shadeName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Shade</th>
-        <td mat-cell *matCellDef="let row">{{ row.shade }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.shadeName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="blend">
+      <ng-container matColumnDef="blendName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Blend</th>
-        <td mat-cell *matCellDef="let row">{{ row.blend }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.blendName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="blendDesc">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Blend Desc</th>
-        <td class="w-10" mat-cell *matCellDef="let row">
-          <div *ngFor="let desc of row.blendDesc.split(',')">
-            {{ desc.trim() }}
-          </div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="lot">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Lot</th>
-        <td mat-cell *matCellDef="let row">{{ row.lot }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="counts">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Counts</th>
-        <td mat-cell *matCellDef="let row">{{ row.counts }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="letterQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Letter Qty</th>
-        <td mat-cell *matCellDef="let row">{{ row.letterQty }}</td>
+      <ng-container matColumnDef="plannedQty">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Planned Qty</th>
+        <td mat-cell *matCellDef="let row">{{ row.plannedQty }}</td>
       </ng-container>
 
       <ng-container matColumnDef="mixedQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mixed Qty</th>
-        <td mat-cell *matCellDef="let row">{{ row.mixedQty }}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fibre Mixed</th>
+        <td mat-cell *matCellDef="let row">{{ row.mixedQuantity }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="prodQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Produced Qty</th>
-        <td mat-cell *matCellDef="let row">{{ row.producedQty }}</td>
+      <ng-container matColumnDef="lot">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Lot(s)</th>
+        <td mat-cell *matCellDef="let row">{{ row.yarnLot }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="mixingWaste">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mixing Waste</th>
-        <td mat-cell *matCellDef="let row">{{ row.mixingWaste }}</td>
+      <ng-container matColumnDef="productionQty">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Yarn Production
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.productionQty }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="wastePerc">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Waste %</th>
-        <td mat-cell *matCellDef="let row">{{ row.wastePercent }}</td>
+      <ng-container matColumnDef="wasteQty">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Waste Qty</th>
+        <td mat-cell *matCellDef="let row">{{ row.wasteQuantity }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="recoveryPerc">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Recovery %</th>
-        <td mat-cell *matCellDef="let row">{{ row.recoveryPercent }}</td>
+      <ng-container matColumnDef="recoveryPercent">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Yarn Recovery %
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.yarnRecoveryPercent || 0 | number : "1.2-2" }}%
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -95,6 +82,7 @@
     </table>
 
     <mat-paginator
+      *ngIf="dataSource.data.length"
       [pageSizeOptions]="[10, 25, 100]"
       aria-label="Select page of users"
     ></mat-paginator>
