--- a/src/app/components/purchases/fibre/fibre-master/fibre-list/add-fibre-type/add-fibre-type.component.html
+++ b/src/app/components/purchases/fibre/fibre-master/fibre-list/add-fibre-type/add-fibre-type.component.html
@@ -1,8 +1,19 @@
 <h1 mat-dialog-title>Add Fibre</h1>
 <div mat-dialog-content class="form">
   <mat-form-field appearance="fill">
-    <mat-label>Fibre</mat-label>
+    <mat-label>Fibre Type</mat-label>
     <input matInput [formControl]="fibre" />
+    <mat-error>This field is required.</mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="fill" class="ml-16">
+    <mat-label>Fibre Category</mat-label>
+    <mat-select [formControl]="fibreCategoryId">
+      <ng-container *ngFor="let category of fibreCategoryList">
+        <mat-option [value]="category.fibreCategoryId">{{
+          category.fibreCategoryName
+        }}</mat-option>
+      </ng-container>
+    </mat-select>
     <mat-error>This field is required.</mat-error>
   </mat-form-field>
 </div>
