added spinner to yarn recovery

--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.scss
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.scss
@@ -34,3 +34,9 @@
 .mat-mdc-header-row {
   background: rgb(225, 225, 225);
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
