--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
@@ -1,5 +1,8 @@
 <h1 mat-dialog-title>Recovery Details</h1>
 <div mat-dialog-content class="container">
+  <div *ngIf="!programDetails" class="spinner">
+    <mat-spinner></mat-spinner>
+  </div>
   <section class="details" *ngIf="programDetails">
     <div>
       <div class="text-dark">Program No</div>
