--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -5,7 +5,10 @@
     <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 
-  <div class="mat-elevation-z8 overflow-auto">
+  <div class="mat-elevation-z8 overflow-auto table-container">
+    <div *ngIf="loader" class="loader">
+      <mat-spinner></mat-spinner>
+    </div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="programNo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Program No</th>
