--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.scss
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.scss
@@ -32,3 +32,21 @@ table {
   border-top: 1px solid #e0e0e0;
   padding: 8px 0;
 }
+
+.table-container {
+  position: relative;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
