--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
@@ -21,48 +21,12 @@
       <div>{{ programDetails.blendName }}</div>
     </div>
     <div>
-      <div class="text-dark">Lot(s)</div>
+      <div class="text-dark">Lot</div>
       <div>{{ data.yarnLot }}</div>
     </div>
   </section>
-  <div *ngIf="programDetails?.yarnCounts?.length">
-    <div class="table-header text-dark">Yarn Counts</div>
-    <table mat-table [dataSource]="programDetails.yarnCounts" class="table">
-      <ng-container matColumnDef="sNo">
-        <th mat-header-cell *matHeaderCellDef>S No</th>
-        <td mat-cell *matCellDef="let element; let index = index">
-          {{ index + 1 }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="counts">
-        <th mat-header-cell *matHeaderCellDef>Counts</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.counts }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="programQty">
-        <th mat-header-cell *matHeaderCellDef>Program Qty</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.programQuantity }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="producedQty">
-        <th mat-header-cell *matHeaderCellDef>Produced Qty</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.productionQuantity }}
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="yarnCountsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: yarnCountsColumns"></tr>
-    </table>
-  </div>
   <div *ngIf="programDetails?.mixingSummary?.length">
-    <div class="table-header text-dark">Mixing Summary</div>
+    <div class="table-header text-dark">Mixing Summary:</div>
     <table mat-table [dataSource]="programDetails.mixingSummary" class="table">
       <ng-container matColumnDef="sNo">
         <th mat-header-cell *matHeaderCellDef>S No</th>
@@ -87,24 +51,74 @@
       </ng-container>
 
       <ng-container matColumnDef="issueQty">
-        <th mat-header-cell *matHeaderCellDef>Issue Qty</th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Issue Qty</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.issueQuantity }}
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="wasteColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: wasteColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="mixingSummaryColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: mixingSummaryColumns"></tr>
     </table>
   </div>
   <section class="details" *ngIf="programDetails">
-    <div class="mb-12">
-      <div class="text-dark">Mixed Quantity (kg)</div>
-      <div>{{ data.mixedQuantity | number : "1.0-3" }}</div>
+    <div class="my-16">
+      <div class="text-dark">Mixed Quantity</div>
+      <div>{{ data.mixedQuantity | number : "1.0-3" }} kg</div>
+    </div>
+  </section>
+  <div *ngIf="programDetails?.yarnCounts?.length">
+    <div class="table-header text-dark">Yarn Counts:</div>
+    <table mat-table [dataSource]="programDetails.yarnCounts" class="table">
+      <ng-container matColumnDef="sNo">
+        <th mat-header-cell *matHeaderCellDef>S No</th>
+        <td mat-cell *matCellDef="let element; let index = index">
+          {{ index + 1 }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="counts">
+        <th mat-header-cell *matHeaderCellDef>Counts</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.counts }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="programQty">
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Program Qty
+        </th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.programQuantity }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="producedQty">
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Produced Qty
+        </th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.productionQuantity }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="yarnCountsColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: yarnCountsColumns"></tr>
+    </table>
+  </div>
+  <section class="details" *ngIf="programDetails">
+    <div class="my-16">
+      <div class="text-dark">Produced Quantity</div>
+      <div>{{ data.productionQty | number : "1.0-3" }} kg</div>
+    </div>
+    <div>
+      <div class="text-dark">Yarn Recovery Percentage</div>
+      <div>{{ data.yarnRecoveryPercent || 0 | number : "1.2-2" }}%</div>
     </div>
   </section>
   <div *ngIf="wasteDetails.length">
-    <div class="table-header text-dark">Waste Details</div>
+    <div class="table-header text-dark">Waste Details:</div>
     <table mat-table [dataSource]="wasteDetails" class="table">
       <ng-container matColumnDef="sNo">
         <th mat-header-cell *matHeaderCellDef>S No</th>
@@ -122,8 +136,8 @@
       </ng-container>
 
       <ng-container matColumnDef="wasteQty">
-        <th mat-header-cell *matHeaderCellDef>Waste Qty</th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Waste Qty</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.wasteQuantity }}
         </td>
       </ng-container>
@@ -133,13 +147,9 @@
     </table>
   </div>
   <section class="details" *ngIf="programDetails">
-    <div>
-      <div class="text-dark">Waste Quantity (kg)</div>
-      <div>{{ data.wasteQuantity | number : "1.0-3" }}</div>
-    </div>
-    <div>
-      <div class="text-dark">Produced Quantity (kg)</div>
-      <div>{{ data.productionQty | number : "1.0-3" }}</div>
+    <div class="my-16">
+      <div class="text-dark">Waste Quantity</div>
+      <div>{{ data.wasteQuantity | number : "1.0-3" }} kg</div>
     </div>
     <div>
       <div class="text-dark">Waste Percentage</div>
@@ -149,10 +159,6 @@
             | number : "1.2-2"
         }}%
       </div>
-    </div>
-    <div>
-      <div class="text-dark">Yarn Recovery Percentage</div>
-      <div>{{ data.yarnRecoveryPercent || 0 | number : "1.2-2" }}%</div>
     </div>
   </section>
 </div>
