--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.scss
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 24px 24px;
+  padding: 0 32px 16px;
 }
 
 .details {
@@ -11,18 +11,18 @@
   }
 
   & > div:not(:last-child) {
-    margin-bottom: 12px;
+    margin-bottom: 16px;
   }
 }
 
 .footer {
   display: flex;
   justify-content: center;
-  padding-bottom: 24px;
+  padding: 24px 0;
 }
 
 .table-header {
-  margin-top: 12px;
+  margin-top: 16px;
 }
 
 .table {
