removed unused component

--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -87,7 +87,7 @@
     <mat-paginator
       *ngIf="dataSource.data.length"
       [pageSizeOptions]="[10, 25, 100]"
-      aria-label="Select page of users"
+      aria-label="Select page of details"
     ></mat-paginator>
   </div>
 </section>
