--- a/src/app/components/sales/create-sales-order/create-sales-order.component.html
+++ b/src/app/components/sales/create-sales-order/create-sales-order.component.html
@@ -7,17 +7,11 @@
     <mat-card-content>
       <form class="form" [formGroup]="form">
         <div class="form-container">
-          <div class="min-w-15 pt-8 sales-no-container">
-            <label for="salesNo" class="font-weight-bold">Order No</label>
-            <div id="salesNo" class="sales-no font-size-16 text-gray pt-4">
-              {{
-                form.get("orderNo")?.value ? form.get("orderNo")?.value : "_"
-              }}
-              <mat-icon matTooltip="Refresh" (click)="getOrderNo()"
-                >refresh</mat-icon
-              >
-            </div>
-          </div>
+          <mat-form-field appearance="fill" class="w-20">
+            <mat-label>Order No</mat-label>
+            <input matInput formControlName="orderNo" />
+            <mat-error>This field is required.</mat-error>
+          </mat-form-field>
           <mat-form-field appearance="fill" class="w-40">
             <mat-label>Party</mat-label>
             <mat-select formControlName="partyId">
@@ -29,7 +23,6 @@
             </mat-select>
             <mat-error>This field is required.</mat-error>
           </mat-form-field>
-
           <mat-form-field appearance="fill" class="w-40">
             <mat-label>Broker Name</mat-label>
             <input matInput formControlName="brokerName" />
@@ -37,11 +30,11 @@
           </mat-form-field>
         </div>
         <div class="form-container">
-          <mat-form-field appearance="fill" class="w-25">
+          <mat-form-field appearance="fill" class="w-100">
             <mat-label>Order Date</mat-label>
             <input
               matInput
-              [matDatepicker]="picker"
+              [matDatepicker]="orderDate"
               formControlName="orderDate"
               (dateChange)="
                 appSharedService.formatDate($event, form.controls['orderDate'])
@@ -50,12 +43,33 @@
             <mat-hint>DD/MM/YYYY</mat-hint>
             <mat-datepicker-toggle
               matIconSuffix
-              [for]="picker"
+              [for]="orderDate"
             ></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <mat-datepicker #orderDate></mat-datepicker>
             <mat-error>This field is required.</mat-error>
           </mat-form-field>
-          <mat-form-field appearance="fill" class="w-25">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Order Creation Date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="receivedDate"
+              formControlName="receivedDate"
+              (dateChange)="
+                appSharedService.formatDate(
+                  $event,
+                  form.controls['receivedDate']
+                )
+              "
+            />
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="receivedDate"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #receivedDate></mat-datepicker>
+            <mat-error>This field is required.</mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="w-100">
             <mat-label>Due Days</mat-label>
             <input
               type="number"
@@ -65,6 +79,8 @@
             />
             <mat-error>This field is required.</mat-error>
           </mat-form-field>
+        </div>
+        <div class="form-container">
           <mat-form-field class="w-50">
             <mat-label>Remarks</mat-label>
             <textarea matInput formControlName="remarks"></textarea>
@@ -81,114 +97,120 @@
     </button>
   </div>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
-    <ng-container matColumnDef="counts">
-      <th mat-header-cell *matHeaderCellDef>Counts</th>
-      <td mat-cell *matCellDef="let element">{{ element.countsName }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+  <div class="mat-elevation-z8 table overflow-auto">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="counts">
+        <th mat-header-cell *matHeaderCellDef>Counts</th>
+        <td mat-cell *matCellDef="let element">{{ element.countsName }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="blend">
-      <th mat-header-cell *matHeaderCellDef>Blend</th>
-      <td mat-cell *matCellDef="let element">{{ element.blendName }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+      <ng-container matColumnDef="blend">
+        <th mat-header-cell *matHeaderCellDef>Blend</th>
+        <td mat-cell *matCellDef="let element">{{ element.blendName }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="shade">
-      <th mat-header-cell *matHeaderCellDef>Shade</th>
-      <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+      <ng-container matColumnDef="shade">
+        <th mat-header-cell *matHeaderCellDef>Shade</th>
+        <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef class="text-right">Quantity(Kg)</th>
-      <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.orderQuantity | number : "1.0-3" }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Quantity(Kg)
+        </th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.orderQuantity | number : "1.0-3" }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="rate">
-      <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
-      <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.rate | currency : "INR" }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+      <ng-container matColumnDef="rate">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.rate | currency : "INR" }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
-      <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.amount | currency : "INR" }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef class="text-right">
-        {{ getAmount() | currency : "INR" }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.amount | currency : "INR" }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef class="text-right">
+          {{ getAmount() | currency : "INR" }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="gstPercent">
-      <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
-      <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.gstPercent | number : "1.2-2" }}%
-      </td>
-      <td mat-footer-cell *matFooterCellDef class="text-right">
-        {{ getTaxAmount() | currency : "INR" }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="gstPercent">
+        <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.gstPercent | number : "1.2-2" }}%
+        </td>
+        <td mat-footer-cell *matFooterCellDef class="text-right">
+          {{ getTaxAmount() | currency : "INR" }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="totalAmount">
-      <th mat-header-cell *matHeaderCellDef class="text-right">Total Amount</th>
-      <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.totalAmount | currency : "INR" }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef class="text-right">
-        {{ getTotalAmount() | currency : "INR" }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="totalAmount">
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Total Amount
+        </th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          {{ element.totalAmount | currency : "INR" }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef class="text-right">
+          {{ getTotalAmount() | currency : "INR" }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="button">
-      <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
-      <td mat-cell *matCellDef="let element" class="text-center">
-        <button
-          mat-icon-button
-          [matMenuTriggerFor]="menu"
-          aria-label="Actions menu"
-        >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
+      <ng-container matColumnDef="button">
+        <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
+        <td mat-cell *matCellDef="let element" class="text-center">
           <button
-            mat-menu-item
-            aria-label="button with a edit icon"
-            (click)="updateData(element)"
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Actions menu"
           >
-            <mat-icon>edit</mat-icon> Edit
+            <mat-icon>more_vert</mat-icon>
           </button>
-          <button
-            mat-menu-item
-            (click)="removeData(element)"
-            aria-label="button with a delete icon"
-          >
-            <mat-icon>delete</mat-icon> Delete
-          </button>
-        </mat-menu>
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              aria-label="button with a edit icon"
+              (click)="updateData(element)"
+            >
+              <mat-icon>edit</mat-icon> Edit
+            </button>
+            <button
+              mat-menu-item
+              (click)="removeData(element)"
+              aria-label="button with a delete icon"
+            >
+              <mat-icon>delete</mat-icon> Delete
+            </button>
+          </mat-menu>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell no-rows" [attr.colspan]="displayedColumns.length">
-        No rows to display
-      </td>
-    </tr>
-    <tr
-      [hidden]="!dataSource.length"
-      mat-footer-row
-      *matFooterRowDef="displayedColumns; sticky: true"
-    ></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell no-rows" [attr.colspan]="displayedColumns.length">
+          No rows to display
+        </td>
+      </tr>
+      <tr
+        [hidden]="!dataSource.length"
+        mat-footer-row
+        *matFooterRowDef="displayedColumns; sticky: true"
+      ></tr>
+    </table>
+  </div>
 
   <div class="footer">
     <button mat-raised-button class="mr-16" (click)="resetData()">
