--- a/src/app/components/sales/create-sales-order/sales-order-dialog/sales-order-dialog.component.html
+++ b/src/app/components/sales/create-sales-order/sales-order-dialog/sales-order-dialog.component.html
@@ -29,7 +29,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Shade Name</mat-label>
         <mat-select formControlName="shadeId">
-          <ng-container *ngFor="let shade of fibreShadeList">
+          <ng-container *ngFor="let shade of yarnShadeList">
             <mat-option [value]="shade.shadeId">{{
               shade.shadeName
             }}</mat-option>
