--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,6 +125,10 @@ app-print-fibre-po {
   padding-top: 4px;
 }
 
+.pb-4 {
+  padding-bottom: 4px;
+}
+
 .pb-16 {
   padding-bottom: 16px;
 }
@@ -175,12 +179,20 @@ app-print-fibre-po {
   margin-left: 24px;
 }
 
+.ml-32 {
+  margin-left: 24px;
+}
+
 .mt-16 {
   margin-top: 16px;
 }
 
 .mt-24 {
   margin-top: 24px;
+}
+
+.mb-4 {
+  margin-bottom: 4px;
 }
 
 .mb-8 {
