--- a/src/app/components/sales/create-sales-order/create-sales-order.component.html
+++ b/src/app/components/sales/create-sales-order/create-sales-order.component.html
@@ -1,5 +1,8 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Create Yarn Sales Order</h1>
+  <h1 class="header letter-spacing-1">
+    <span *ngIf="!updateOrderDetails">Create Yarn Sales Order</span>
+    <span *ngIf="updateOrderDetails">Update Yarn Sales Order</span>
+  </h1>
   <mat-card class="party-card">
     <mat-card-header>
       <mat-card-title>Sales Details</mat-card-title>
@@ -11,6 +14,7 @@
             <mat-label>Order No</mat-label>
             <input matInput formControlName="orderNo" />
             <mat-error>This field is required.</mat-error>
+            <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-40">
             <mat-label>Party</mat-label>
@@ -22,6 +26,7 @@
               </ng-container>
             </mat-select>
             <mat-error>This field is required.</mat-error>
+            <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-40">
             <mat-label>Broker Name</mat-label>
@@ -40,7 +45,8 @@
                 appSharedService.formatDate($event, form.controls['orderDate'])
               "
             />
-            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-hint *ngIf="!updateOrderDetails">DD/MM/YYYY</mat-hint>
+            <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
             <mat-datepicker-toggle
               matIconSuffix
               [for]="orderDate"
@@ -61,7 +67,8 @@
                 )
               "
             />
-            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-hint *ngIf="!updateOrderDetails">DD/MM/YYYY</mat-hint>
+            <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
             <mat-datepicker-toggle
               matIconSuffix
               [for]="receivedDate"
@@ -101,7 +108,7 @@
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="counts">
         <th mat-header-cell *matHeaderCellDef>Counts</th>
-        <td mat-cell *matCellDef="let element">{{ element.countsName }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.counts }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
@@ -217,7 +224,9 @@
       <mat-icon>refresh</mat-icon>Reset
     </button>
     <button mat-raised-button color="primary" (click)="submitOrder()">
-      <mat-icon>save_alt</mat-icon>Submit
+      <mat-icon>save_alt</mat-icon
+      ><span *ngIf="!updateOrderDetails">Submit</span
+      ><span *ngIf="updateOrderDetails">Update</span>
     </button>
   </div>
 </section>
