--- a/src/app/components/sales/search-sales-order/order-details/order-details.component.html
+++ b/src/app/components/sales/search-sales-order/order-details/order-details.component.html
@@ -4,38 +4,38 @@
     <mat-icon>close</mat-icon>
   </button>
 </div>
-<div mat-dialog-content class="container">
+<div mat-dialog-content class="container word-break-all">
   <section class="details">
     <div>
-      <div class="text-dark pb-4">Order Id</div>
+      <div class="text-dark pb-2">Order Id</div>
       <div>{{ orderDetails.orderId }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Order No</div>
+      <div class="text-dark pb-2">Order No</div>
       <div>{{ orderDetails.orderNo }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Party Name</div>
+      <div class="text-dark pb-2">Party Name</div>
       <div>{{ getParty(orderDetails.partyId) }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Party Order Date</div>
+      <div class="text-dark pb-2">Party Order Date</div>
       <div>{{ orderDetails.orderDate }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Order Creation Date</div>
+      <div class="text-dark pb-2">Order Creation Date</div>
       <div>{{ orderDetails.receivedDate }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Broker Name</div>
+      <div class="text-dark pb-2">Broker Name</div>
       <div>{{ orderDetails.brokerName }}</div>
     </div>
     <div>
-      <div class="text-dark pb-4">Due Days</div>
+      <div class="text-dark pb-2">Due Days</div>
       <div>{{ orderDetails.dueDays }}</div>
     </div>
     <div *ngIf="orderDetails.remarks">
-      <div class="text-dark pb-4">Remarks</div>
+      <div class="text-dark pb-2">Remarks</div>
       <div>{{ orderDetails.remarks }}</div>
     </div>
   </section>
@@ -75,7 +75,7 @@
     <ng-container matColumnDef="rate">
       <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.rate }}
+        {{ element.rate | currency : "INR" }}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
@@ -104,8 +104,8 @@
       <th mat-header-cell *matHeaderCellDef class="text-right">Total Amount</th>
       <td mat-cell *matCellDef="let element" class="text-right">
         {{
-          (element.rate * element.orderQuantity * element.gstPercent) / 100
-            | currency : "INR"
+          (element.rate * element.orderQuantity * element.gstPercent) / 100 +
+            element.rate * element.orderQuantity | currency : "INR"
         }}
       </td>
       <td mat-footer-cell *matFooterCellDef class="text-right">
