--- a/src/app/components/sales/search-sales-order/order-details/order-details.component.scss
+++ b/src/app/components/sales/search-sales-order/order-details/order-details.component.scss
@@ -24,9 +24,14 @@
   background: rgb(225, 225, 225);
 }
 
+.mat-mdc-table-sticky {
+  border-top: 1px solid #e0e0e0;
+}
+
 .footer {
   display: flex;
   justify-content: center;
   gap: 8px;
-  margin: 16px 0;
+  margin-top: 8px;
+  margin-bottom: 16px;
 }
