--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,8 +125,8 @@ app-print-fibre-po {
   padding-top: 4px;
 }
 
-.pb-4 {
-  padding-bottom: 4px;
+.pb-2 {
+  padding-bottom: 2px;
 }
 
 .pb-16 {
@@ -289,4 +289,8 @@ app-print-fibre-po {
 
 .overflow-auto {
   overflow: auto;
+}
+
+.word-break-all {
+  word-break: break-all;
 }
