--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -33,12 +33,16 @@
       </ng-container>
 
       <ng-container matColumnDef="plannedQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Planned Qty</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Planned Qty(kg)
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.plannedQty }}</td>
       </ng-container>
 
       <ng-container matColumnDef="mixedQuantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fibre Mixed</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Fibre Mixed(kg)
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.mixedQuantity }}</td>
       </ng-container>
 
@@ -49,13 +53,13 @@
 
       <ng-container matColumnDef="productionQty">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Yarn Production
+          Yarn Production(kg)
         </th>
         <td mat-cell *matCellDef="let row">{{ row.productionQty }}</td>
       </ng-container>
 
       <ng-container matColumnDef="wasteQuantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Waste Qty</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Waste Qty(kg)</th>
         <td mat-cell *matCellDef="let row">{{ row.wasteQuantity }}</td>
       </ng-container>
 
