--- a/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
+++ b/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
@@ -2,7 +2,98 @@
   margin: 32px;
 }
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 38px 0;
+}
+
 .header {
   font-weight: 500;
-  margin: 40px 0;
+  margin: 0;
+}
+
+.card {
+  margin-bottom: 32px;
+}
+
+.form-container {
+  padding: 32px 32px 24px;
+  display: flex;
+  gap: 48px;
+}
+
+.details-container {
+  display: flex;
+  gap: 32px;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-mdc-header-row {
+  background: rgb(225, 225, 225);
+}
+
+.mat-mdc-table-sticky {
+  border-top: 1px solid #e0e0e0;
+}
+
+.no-rows {
+  padding: 16px 0;
+  text-align: center;
+}
+
+.mixing-row {
+  height: 70px;
+}
+
+.footer {
+  margin-top: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cell-input {
+  text-align: right;
+  font-size: 14.5px;
+  padding: 0 8px;
+  height: 30px;
+  border: 1px solid rgb(0, 0, 0, 0.5);
+  border-radius: 5px;
+  background-color: whitesmoke;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.border-error {
+  border: 2px solid rgba(223, 29, 29);
+  &:focus-visible {
+    outline-color: rgba(223, 29, 29);
+  }
+}
+
+.input-container {
+  position: relative;
+}
+
+.error-alert {
+  position: absolute;
+  right: 16px;
+  text-align: right;
+  font-size: 12px;
+  color: rgb(232, 80, 80);
+  margin: 0;
+}
+
+.stock-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
