--- a/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
+++ b/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
@@ -97,3 +97,30 @@ input::-webkit-inner-spin-button {
   justify-content: space-between;
   align-items: flex-end;
 }
+
+.cell-input {
+  text-align: right;
+  font-size: 14.5px;
+  padding: 0 8px;
+  height: 30px;
+  border: 1px solid rgb(0, 0, 0, 0.5);
+  border-radius: 5px;
+  background-color: whitesmoke;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.issue-qty-border-error {
+  border: 2px solid rgba(223, 29, 29);
+  &:focus-visible {
+    outline-color: rgba(223, 29, 29);
+  }
+}
+
+.input-container {
+  position: relative;
+}
