Yarn sales update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,4 @@
   </mat-sidenav-container>
 </section>
 <app-print-fibre-po></app-print-fibre-po>
+<app-print-delivery-receipt></app-print-delivery-receipt>
