--- a/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
@@ -1,4 +1,4 @@
-<section class="print" *ngIf="printFibreService.print">
+<section class="print" *ngIf="printFibreService.fibrePOprint">
   <section id="header">
     <span>SREE GOMATHI AMMAN SPINNING MILLS PVT LTD</span>
     <span>GOBICETTIPALAYAM</span>
