--- a/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
+++ b/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.scss
@@ -19,9 +19,13 @@
 }
 
 .form-container {
-  padding: 32px 32px 24px;
+  padding: 24px 32px 12px;
   display: flex;
   gap: 48px;
+}
+
+.remarks {
+  padding: 12px 32px 24px;
 }
 
 .details-container {
