--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,9 +16,19 @@ app-print-fibre-po {
   display: none;
 }
 
+app-print-delivery-receipt {
+  visibility: hidden;
+  opacity: 0;
+}
+
 @media print {
   app-print-fibre-po {
     display: block;
+  }
+
+  app-print-delivery-receipt {
+    visibility: visible;
+    opacity: 100;
   }
 
   #app-container,
@@ -157,6 +167,10 @@ app-print-fibre-po {
   padding-right: 4px;
 }
 
+.pl-4 {
+  padding-left: 4px;
+}
+
 .pl-16 {
   padding-left: 16px;
 }
@@ -237,6 +251,10 @@ app-print-fibre-po {
 
 .font-size-16 {
   font-size: 16px;
+}
+
+.font-size-12 {
+  font-size: 12px;
 }
 
 .font-size-14 {
