--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
@@ -21,7 +21,7 @@
     height: 120px;
     background: url("../../../../assets/images/print/amman.svg");
     background-size: cover;
-    margin-right: 12px;
+    margin: 0 8px;
   }
 
   .details {
