delivery details header update

--- a/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
+++ b/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="title">
-    <h1 mat-dialog-title>Order Details</h1>
+    <h1 mat-dialog-title>Delivery Details</h1>
     <button
       mat-icon-button
       matTooltip="print"
