Added branch name in DC receipt

--- a/src/app/components/sales/deliveries/deliveries.component.html
+++ b/src/app/components/sales/deliveries/deliveries.component.html
@@ -104,7 +104,7 @@
     </button>
   </section>
   <div *ngIf="dataSource.data.length" class="text-right mb-4">
-    &ast;Click the row to see the order details
+    &ast;Click the row to see the delivery details
   </div>
   <div class="overflow-auto mat-elevation-z8 table-container">
     <div *ngIf="loader" class="loader">
