Added delivery invoice & fibre stock

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,5 @@
   </mat-sidenav-container>
 </section>
 <app-print-fibre-po></app-print-fibre-po>
+<app-print-delivery-invoice></app-print-delivery-invoice>
 <app-print-delivery-receipt></app-print-delivery-receipt>
