--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -91,7 +91,7 @@
     </div>
   </div>
   <div>
-    <div class="fibre-stock-btn mb-16">
+    <div class="fibre-stock-btn mb-16" *ngIf="programDetails">
       <button mat-raised-button color="primary" (click)="fibreStock()">
         <mat-icon>playlist_add</mat-icon> Select Fibre Stock
       </button>
