--- a/src/app/components/sales/delivery-invoice/delivery-invoice.component.html
+++ b/src/app/components/sales/delivery-invoice/delivery-invoice.component.html
@@ -1,17 +1,17 @@
 <section class="container">
   <div class="header-container">
-    <h1 class="header letter-spacing-1">Yarn Sales Order Delivery</h1>
+    <h1 class="header letter-spacing-1">Delivery Invoice</h1>
     <button mat-raised-button color="primary" (click)="chooseOrder()">
-      Choose Order for Delivery
+      Choose Order for Invoice
     </button>
   </div>
   <div class="details-container">
     <mat-card class="card w-100">
       <mat-card-header>
-        <mat-card-title>Delivery Details</mat-card-title>
+        <mat-card-title>Invoice Details</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <form [formGroup]="form">
+        <form>
           <div class="form-container">
             <div class="w-25 ml-16">
               <label class="font-weight-bold">Order No</label>
@@ -44,23 +44,13 @@
           <div class="form-container">
             <div class="w-25">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Vehicle No</mat-label>
-                <input type="text" matInput formControlName="vehicleNo" />
-                <mat-error>This field is required.</mat-error>
-              </mat-form-field>
-            </div>
-            <div class="w-25">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Delivery Date</mat-label>
+                <mat-label>Invoice Date</mat-label>
                 <input
                   matInput
                   [matDatepicker]="picker"
-                  formControlName="deliveryDate"
+                  [formControl]="invoiceDate"
                   (dateChange)="
-                    appSharedService.formatDate(
-                      $event,
-                      form.controls['deliveryDate']
-                    )
+                    appSharedService.formatDate($event, invoiceDate)
                   "
                 />
                 <mat-hint>DD/MM/YYYY</mat-hint>
@@ -72,43 +62,28 @@
                 <mat-error>This field is required.</mat-error>
               </mat-form-field>
             </div>
-            <div class="w-50">
-              <mat-form-field class="w-100">
-                <mat-label>Delivery Address</mat-label>
-                <mat-select formControlName="deliveryAddressId">
-                  <mat-option
-                    *ngFor="let party of parties"
-                    [value]="party.partyId"
-                  >
-                    {{ getAddress(party) }}
-                  </mat-option>
-                </mat-select>
-                <mat-error>This field is required.</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class="remarks">
-            <mat-form-field class="w-50">
-              <mat-label>Remarks</mat-label>
-              <textarea matInput formControlName="remarks"></textarea>
-              <mat-hint>Optional</mat-hint>
-            </mat-form-field>
           </div>
         </form>
       </mat-card-content>
     </mat-card>
   </div>
   <div>
-    <div class="stock-btn mb-16" *ngIf="orderSelected">
-      <button mat-raised-button color="primary" (click)="yarnStock()">
-        <mat-icon>playlist_add</mat-icon> Select Yarn Stock
+    <div class="dc-btn mb-16" *ngIf="orderSelected">
+      <button mat-raised-button color="primary" (click)="yarnDC()">
+        <mat-icon>playlist_add</mat-icon> Select DC
       </button>
     </div>
     <div class="overflow-auto mat-elevation-z8">
-      <table mat-table [dataSource]="stockDetails">
-        <ng-container matColumnDef="programNo">
-          <th mat-header-cell *matHeaderCellDef>Program No</th>
-          <td mat-cell *matCellDef="let element">{{ element.programNo }}</td>
+      <table mat-table [dataSource]="dcDetails">
+        <ng-container matColumnDef="dcNo">
+          <th mat-header-cell *matHeaderCellDef>DC No</th>
+          <td mat-cell *matCellDef="let element">{{ element.dcNo }}</td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="dcDate">
+          <th mat-header-cell *matHeaderCellDef>DC Date</th>
+          <td mat-cell *matCellDef="let element">{{ element.dcDate }}</td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
@@ -130,68 +105,20 @@
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
-        <ng-container matColumnDef="lot">
-          <th mat-header-cell *matHeaderCellDef>Lot</th>
-          <td mat-cell *matCellDef="let element">{{ element.lot }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-
-        <ng-container matColumnDef="productionQuantity">
+        <ng-container matColumnDef="deliveredQuantity">
           <th mat-header-cell *matHeaderCellDef class="text-right">
-            Production Qty
+            Delivered Qty
           </th>
           <td mat-cell *matCellDef="let element" class="text-right">
-            {{ element.productionQuantity }}
+            {{ element.deliveredQuantity }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-
-        <ng-container matColumnDef="stockQuantity">
-          <th mat-header-cell *matHeaderCellDef class="text-right">
-            Stock Qty
-          </th>
-          <td mat-cell *matCellDef="let element" class="text-right">
-            {{ element.stockQuantity }}
-          </td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-
-        <ng-container matColumnDef="issueQuantity">
-          <th mat-header-cell *matHeaderCellDef class="text-right">
-            Issue Qty
-          </th>
-          <td
-            mat-cell
-            *matCellDef="let element"
-            class="w-15 text-right input-container"
-          >
-            <input
-              [ngClass]="{
-                'issue-qty-border-error':
-                  checkIssueQty(element) || checkZeroInIssueQty(element)
-              }"
-              #issuedQty
-              type="number"
-              class="cell-input w-70"
-              (input)="element.issueQuantity = issuedQty.value"
-              decimal="3"
-            />
-            <p *ngIf="checkIssueQty(element)" class="error-alert">
-              Greater than Stock Qty
-            </p>
-            <p *ngIf="checkZeroInIssueQty(element)" class="error-alert">
-              Issue qty should not be zero
-            </p>
-          </td>
-          <td mat-footer-cell *matFooterCellDef class="text-right">
-            {{ getTotalIssueQty() || 0 | number : "1.0-3" }}
-          </td>
         </ng-container>
 
         <ng-container matColumnDef="rate">
           <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
           <td mat-cell *matCellDef="let element" class="text-right">
-            {{ orderSelected?.rate | currency : "INR" }}
+            {{ element.rate | currency : "INR" }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -200,7 +127,7 @@
           <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
           <td mat-cell *matCellDef="let element" class="text-right">
             {{
-              (orderSelected?.rate || 0) * (element.issueQuantity || 0)
+              (element.rate || 0) * (element.deliveredQuantity || 0)
                 | currency : "INR"
             }}
           </td>
@@ -209,10 +136,10 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="gstpercent">
+        <ng-container matColumnDef="gstPercent">
           <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
           <td mat-cell *matCellDef="let element" class="text-right">
-            {{ orderSelected?.gstPercent | number : "1.0-2" }}%
+            {{ element.gstPercent | number : "1.0-2" }}%
           </td>
           <td mat-footer-cell *matFooterCellDef class="text-right">
             {{ getSumOfTax() | currency : "INR" }}
@@ -224,11 +151,27 @@
             Total Amount
           </th>
           <td mat-cell *matCellDef="let element" class="text-right">
-            {{ getTotalAmount(element.issueQuantity) | currency : "INR" }}
+            {{ getTotalAmount(element) | currency : "INR" }}
           </td>
           <td mat-footer-cell *matFooterCellDef class="text-right">
             {{ getSumOfTotalAmount() | currency : "INR" }}
           </td>
+        </ng-container>
+
+        <ng-container matColumnDef="vehicleNo">
+          <th mat-header-cell *matHeaderCellDef>Vehicle No</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.vehicleNo }}
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="remarks">
+          <th mat-header-cell *matHeaderCellDef>Remarks</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.remarks }}
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
         <ng-container matColumnDef="action">
@@ -239,7 +182,7 @@
               color="warn"
               matTooltip="Remove"
               aria-label="button with a delete icon"
-              (click)="removeStock(element)"
+              (click)="removeDc(element)"
             >
               <mat-icon>delete</mat-icon>
             </button>
@@ -247,19 +190,19 @@
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="stockDisplayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr
-          class="mixing-row"
+          class="dc-row"
           mat-row
-          *matRowDef="let row; columns: stockDisplayedColumns"
+          *matRowDef="let row; columns: displayedColumns"
         ></tr>
         <tr
-          [hidden]="!stockDetails.length"
+          [hidden]="!dcDetails.length"
           mat-footer-row
-          *matFooterRowDef="stockDisplayedColumns; sticky: true"
+          *matFooterRowDef="displayedColumns; sticky: true"
         ></tr>
         <tr *matNoDataRow>
-          <td class="no-rows" [attr.colspan]="stockDisplayedColumns.length">
+          <td class="no-rows" [attr.colspan]="displayedColumns.length">
             No rows to display
           </td>
         </tr>
