--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
@@ -172,10 +172,14 @@
   }
 
   .authorised-sign {
+    position: relative;
     border: 1px solid;
     border-radius: 5px;
+    & div:first-child {
+      position: absolute;
+    }
     & div:not(:first-child, :last-child) {
-      height: 60px;
+      height: 100px;
     }
   }
 }
