--- a/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
+++ b/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
@@ -50,6 +50,10 @@
       <div>{{ deliveryDetails.blendName }}</div>
     </div>
     <div>
+      <div class="text-dark pb-2">HSN Code</div>
+      <div>{{ deliveryDetails.hsnCode || "-" }}</div>
+    </div>
+    <div>
       <div class="text-dark pb-2">Order Quantity</div>
       <div>{{ deliveryDetails.orderQuantity }}</div>
     </div>
