--- a/src/app/components/sales/delivery-invoice/print-delivery-invoice/print-delivery-invoice.component.scss
+++ b/src/app/components/sales/delivery-invoice/print-delivery-invoice/print-delivery-invoice.component.scss
@@ -102,16 +102,32 @@
     width: 100%;
   }
 
-  td,
   th {
     border-bottom: 1px solid;
+  }
+
+  th,
+  td {
     text-align: left;
     padding: 10px;
   }
 
-  td:not(:last-child),
-  th:not(:last-child) {
+  tfoot {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+  }
+
+  td:not(tfoot td, :last-child),
+  th:not(tfoot th, :last-child) {
     border-right: 1px solid;
+  }
+
+  .border-right {
+    border-right: 1px solid;
+  }
+
+  .border-left {
+    border-left: 1px solid;
   }
 
   .vehicle {
