--- a/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.html
+++ b/src/app/components/sales/delivery-sales-order/delivery-sales-order.component.html
@@ -161,7 +161,7 @@
           <td
             mat-cell
             *matCellDef="let element"
-            class="w-15 text-right input-container"
+            class="w-15 text-right input-container min-width"
           >
             <input
               [ngClass]="{
@@ -190,7 +190,7 @@
           <td
             mat-cell
             *matCellDef="let element"
-            class="w-15 text-right input-container"
+            class="w-15 text-right input-container min-width"
           >
             <input
               [ngClass]="{
